--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -26,7 +26,7 @@
     <div class="trophy-card">
       <img src="assets/trophy.png" alt="Trofeu" class="trophy-img" />
       <h3 class="trophy-title">Pregătit pentru competiție?</h3>
-      <button class="create-btn" routerLink="/create-tournament">Creează un turneu</button>
+      <button class="create-btn" routerLink="/tournament">Creează un turneu</button>
     </div>
   </div>
 </section>
