--- a/angular/src/app/home/home.component.css
+++ b/angular/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .home-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   gap: 20px;
   min-height: calc(100vh - 80px);
